fix the title not showing if there is a background image.

--- a/app/assets/stylesheets/collection.css.scss
+++ b/app/assets/stylesheets/collection.css.scss
@@ -45,7 +45,7 @@ body.collection {
       border-width: 1px 0;
       font-family: GPCMed;
       margin: 0 auto;
-      margin-bottom: 1em;
+      margin-bottom: 15vh;
       margin-top: 15vh;
       padding :8px;
       text-align: center;
